syntax = "proto3";

package stocktrading;
option java_multiple_files=true;
option java_package="org.distributed";
option java_outer_classname="StockTradingProto";

message StockRequest {
  string stock_symbol = 1;
}

message StockResponse {
  string stock_symbol = 1;
  double price = 2;
  string timestamp = 3;
}

service StockTradingService {
  // UNARY - RPC -> get current stock prices
  rpc getStockPrice(StockRequest) returns (StockResponse);
}